core/roboconf-core/src/test/resources/configurations/invalid/duplicate-component.graph
componentA {
	installer: whatever;
}

componentB {
	installer: B;
}

componentA {
	installer: whatever;
}
